# release-tool

./: README.md  pyproject.toml  start.bat
docs/: RETRIEVE_EXECUTABLE_SIGNER.md
examples/: release_config.ini
src/release_tool/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  ftp_client.py  old_file_handler.py  pre_signer.py  release_manager.py  release_notes_uploader.py
tests/: conftest.py  test_cli.py  test_config.py  test_ftp_client.py  test_old_file_handler.py  test_release_manager.py
tools/: tests.bat
